# databricks-metadata-ingestion

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  LICENSE  METADATA_DRIVEN_INGESTION.md  Makefile  QUICK_START.md  README.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: basic_ingestion.py
src/databricks_metadata_ingestion/: __init__.py  config.py
src/databricks_metadata_ingestion/connectors/: __init__.py  base.py  databricks_connector.py  multi_source_connector.py
src/databricks_metadata_ingestion/models/: __init__.py  metadata_models.py
src/databricks_metadata_ingestion/processors/: __init__.py  metadata_driven_pipeline.py  pipeline.py
src/databricks_metadata_ingestion/utils/: __init__.py  audit_logger.py  bronze_manager.py  helpers.py
tests/: test_connectors.py  test_processors.py
